   should ignore floating point exceptions and produce NaNs and infinities
   or either use the condition system to produce the associated errors.

 - Two new functions, EXT:FLOAT-NAN-P and EXT:FLOAT-INFINITY-P.

 - Eight new constants for the eight possible infinities
   EXT:{SHORT,SINGLE,DOUBLE,LONG}-FLOAT-{POSITIVE,NEGATIVE}-INFINITY

 - SI:TRAP-FPE always returns an integer denoting the new active / inactive
   floating point traps. In particular, (SI:TRAP-FPE 'LAST T) returns the
   currently active traps. This value can be passed to SI:TRAP-FPE as first
   argument again. This is useful for performing a computation without traps
	(let* (( (si::trap-fpe 'last nil)))
	  (prog1 (/ 0.0 0.0) (si::trap-fpe bits t)))

* Bugs fixed:

 - Remove an obsolete #if statement for Solaris that broke current builds
   with Solaris 10.

 - The mechanism for checking the existence of [u]int{16,32,64}_t or other
   replacement types was not used for [u]int8_t.

 - When COMPILE-FILE is invoked with a non-nil value of :OUTPUT-FILE, ECL
   now honors the file type supplied by the user, instead of overriding it
   with "fas" or "fasl". The same applies to COMPILE-FILE-PATHNAME.

 - When building ECL's C preprocessor (dpp), the value of CPPFLAGS was
   not used.

 - A wrong order in the list of libraries (-lpthread -lgc) prevented ECL
   from having multithread support in FreeBSD, OpenBSD and NetBSD.

 - Removed a shell command from src/Makefile.in The command used braces {}
   which FreeBSD does not understand.

 - Changed the way in which threads are created and registered with ECL to
   avoid certain race conditions and data loss when it takes a long time
   betwee calls to mp:make-proceess and mp:process-enable

 - ecl_import_current_thread() now properly stores the thread handle in
   the process object and can be called multiple times for the same thread.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***