@@ -885,6 +885,7 @@ typedef enum {
 	ECL_OPT_SIGALTSTACK_SIZE,
 	ECL_OPT_HEAP_SIZE,
 	ECL_OPT_HEAP_SAFETY_AREA,
+        ECL_OPT_THREAD_INTERRUPT_SIGNAL,
 	ECL_OPT_LIMIT
 } ecl_option;
 
